# screenshot-to-testcase

./: README.md  main.py  pyproject.toml  requirements.txt
images/logo/: screenshot-to-testcase logo ad.afdesign
src/llm/: custom_llm.py
src/prompt/: testcase_generator_prompt.py
src/ui/: gradio_ui.py
